main.tf
provider "aws" {
    region = "us-east-1"
    access_key = "${var.access_key}"
    secret_key = "${var.secret_key}"
}

# 1. create a VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production-vpc"
  }
}

# 2. create an Internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

  tags = {
    Name = "production-igw"
  }
}

# 3. create an custom route table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "production-route-table"
  }
}

# 4. create a subnet inside a VPC
resource "aws_subnet" "subnet-1a" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "production-subnet"
  }
}

# 5. associate the subnet with route table
resource "aws_route_table_association" "a" {
  subnet_id      = "${aws_subnet.subnet-1a.id}"
  route_table_id = "${aws_route_table.prod-route-table.id}"
}

# 6. create security group with ports 22, 80, 443
resource "aws_security_group" "web-sg" {
  name        = "allow_web_sg"
  description = "allow web traffic"
  vpc_id      = aws_vpc.prod-vpc.id
  
  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web_sg"
  }
}

# 7. create an network interface w IP in the subnet create in step 4
resource "aws_network_interface" "web-service-nic" {
  subnet_id       = aws_subnet.subnet-1a.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.web-sg.id]
}

# 8. assign elastic IP with the network interface create in step 7
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = "${aws_network_interface.web-service-nic.id}"
  associate_with_private_ip = "10.0.1.50"
  depends_on = [ aws_internet_gateway.gw ]
}

# 9. create an Ubuntu server and install/update apache2
resource "aws_instance" "web-server-instance" {
    ami = "ami-06ca3ca175f37dd66"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "${var.key_pair}"

    network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-service-nic.id
    }

     user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF

    tags = {
        Name = "production-web-server"
    }
}





# resource "aws_instance" "my-first-server" {
#     ami = "ami-06ca3ca175f37dd66"
#     instance_type = "t2.micro"
#     tags = {
#         Name = "ubuntu"
#     }
# }
